--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+  background-image: url('../public/sky.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #282828;
+}
 .App {
   text-align: center;
 }
